test/apps/errors/src/routes/access_document.svelte
<script context="module">
	export function preload() {
		console.log(document.location);
	}
</script>
